2.1.1/_sources/gallery/units/ellipse_with_units.rst.txt


.. _sphx_glr_gallery_units_ellipse_with_units.py:


==================
Ellipse With Units
==================

Compare the ellipse generated with arcs versus a polygonal approximation

.. only:: builder_html

   This example requires :download:`basic_units.py <basic_units.py>`



.. code-block:: python

    from basic_units import cm
    import numpy as np
    from matplotlib import patches
    import matplotlib.pyplot as plt


    xcenter, ycenter = 0.38*cm, 0.52*cm
    width, height = 1e-1*cm, 3e-1*cm
    angle = -30

    theta = np.deg2rad(np.arange(0.0, 360.0, 1.0))
    x = 0.5 * width * np.cos(theta)
    y = 0.5 * height * np.sin(theta)

    rtheta = np.radians(angle)
    R = np.array([
        [np.cos(rtheta), -np.sin(rtheta)],
        [np.sin(rtheta),  np.cos(rtheta)],
        ])


    x, y = np.dot(R, np.array([x, y]))
    x += xcenter
    y += ycenter








.. code-block:: python


    fig = plt.figure()
    ax = fig.add_subplot(211, aspect='auto')
    ax.fill(x, y, alpha=0.2, facecolor='yellow',
            edgecolor='yellow', linewidth=1, zorder=1)

    e1 = patches.Ellipse((xcenter, ycenter), width, height,
                         angle=angle, linewidth=2, fill=False, zorder=2)

    ax.add_patch(e1)

    ax = fig.add_subplot(212, aspect='equal')
    ax.fill(x, y, alpha=0.2, facecolor='green', edgecolor='green', zorder=1)
    e2 = patches.Ellipse((xcenter, ycenter), width, height,
                         angle=angle, linewidth=2, fill=False, zorder=2)


    ax.add_patch(e2)
    fig.savefig('ellipse_compare')




.. image:: /gallery/units/images/sphx_glr_ellipse_with_units_001.png
    :align: center





.. code-block:: python


    fig = plt.figure()
    ax = fig.add_subplot(211, aspect='auto')
    ax.fill(x, y, alpha=0.2, facecolor='yellow',
            edgecolor='yellow', linewidth=1, zorder=1)

    e1 = patches.Arc((xcenter, ycenter), width, height,
                     angle=angle, linewidth=2, fill=False, zorder=2)

    ax.add_patch(e1)

    ax = fig.add_subplot(212, aspect='equal')
    ax.fill(x, y, alpha=0.2, facecolor='green', edgecolor='green', zorder=1)
    e2 = patches.Arc((xcenter, ycenter), width, height,
                     angle=angle, linewidth=2, fill=False, zorder=2)


    ax.add_patch(e2)
    fig.savefig('arc_compare')

    plt.show()



.. image:: /gallery/units/images/sphx_glr_ellipse_with_units_002.png
    :align: center




**Total running time of the script:** ( 0 minutes  0.158 seconds)



.. only :: html

 .. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: ellipse_with_units.py <ellipse_with_units.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: ellipse_with_units.ipynb <ellipse_with_units.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
